Add postgres service to pipelines.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,15 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:14.2
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: minumtium
+          POSTGRES_PASSWORD: minumtium
+          POSTGRES_DB: minumtium
     strategy:
       matrix:
         python-version: [ '3.6', '3.7', '3.8', '3.9']
@@ -40,7 +49,9 @@ jobs:
       - name: Setup Environment
         run: pipenv install --dev
       - name: Unit Tests
-        run: pipenv run python -m pytest ./tests/ --cov=tests/ --cov-report xml:coverage.xml
+        run: pipenv run python -m pytest ./tests/unit
+      - name: Integrated Tests
+        run: pipenv run python -m pytest ./tests/integrated
       - name: Coverage Report
         run: pipenv run python -m coverage xml -i
       - name: SonarCloud Scan
