--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,15 @@ jobs:
     needs:
       - test
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:14.2
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: minumtium
+          POSTGRES_PASSWORD: minumtium
+          POSTGRES_DB: minumtium
     steps:
       - uses: actions/checkout@v2
         with:
